...
                    onPressed: widget.onGraphs,
                    child: const Text('Change graph'),
                  ),
                if (widget.onModels != null)
                  TextButton(
                    onPressed: widget.onModels,
                    child: const Text('Change model'),
                  ),
                TextButton(
                  onPressed: widget.onGetModel,
                  child: const Text('Get a model from CivitAI'),
                ),
              ],
...
